crates/amalgam-parser/tests/snapshots/practical_usage_snapshot_test__edge_cases.snap
---
source: crates/amalgam-parser/tests/practical_usage_snapshot_test.rs
expression: snapshot_content
---
SUCCESS: false

OUTPUT:
STDERR:
error: missing definition for `maxReplicas`
   ┌─ /Users/jtoft/src/ai/amalgam/examples/pkgs/k8s_io/v2/HorizontalPodAutoscalerSpec.ncl:15:3
   │
15 │   maxReplicas
   │   ^^^^^^^^^^^ required here
   │
   ┌─ /Users/jtoft/src/ai/amalgam/test_snapshot_temp_80558_0.ncl:17:12
   │  
17 │       spec = {
   │ ╭────────────'
18 │ │       metrics = [{
19 │ │         type = "Resource",
20 │ │         resource = {
   · │
41 │ │       }],
42 │ │     },
   │ ╰─────' in this record


STDOUT:
